--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 </head>
 <body>
     <style>
+        .video-container {
+  position: relative;
+  padding-bottom: calc(56.25% * 0.75); /* 16:9 */
+  width: 75%;
+  height: 0;
+}
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
                 nav {
             display: flex;
             justify-content: center;
@@ -43,7 +56,9 @@
     </style>
     <center>
     <h1>Watch together</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/sXUKSxTP5xY?si=GBPJxUE-rkj_cBBV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/sXUKSxTP5xY?si=GBPJxUE-rkj_cBBV" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <footer>
         <p id="p"><script>document.getElementById("p").innerText = "© " + new Date().getFullYear()</script></p>
       </footer>
