--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <nav>
             <a href="index.html">HOME</a>
-            <a href="https://www.instagram.com/don_eltac/">INSTAGRAM</a>
+            <a href="https://www.instagram.com/oriannapvt?igsh=MWF5Y3RlNXh6d3I4NQ==">INSTAGRAM</a>
             <a href="https://youtu.be/sXUKSxTP5xY">VIDEOS</a>
     </nav>
 </head>
