Update index.html #3

--- a/index.html
+++ b/index.html
@@ -63,5 +63,13 @@
         <p id="p"><script>document.getElementById("p").innerText = "© " + new Date().getFullYear()</script></p>
       </footer>
 </center>
+          <script>
+        let orianna = 0;
+
+        while (orianna <= 10) {
+            console.log(`${orianna} U are the best!`);
+            orianna++;
+        }
+      </script>
 </body>
 </html>
