Update index.html #4

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         let orianna = 0;
 
         while (orianna <= 10) {
-            console.log(`${orianna} U are the best!`);
+            console.log(`${orianna} Orianna, u are the best!`);
             orianna++;
         }
       </script>
