Update index.html #5

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Orianna</title>
+    <link rel="icon" type="image/jpg" href="favicon.jpg">
     <nav>
             <a href="index.html">HOME</a>
             <a href="https://www.instagram.com/oriannapvt?igsh=MWF5Y3RlNXh6d3I4NQ==">INSTAGRAM</a>
