--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <nav>
             <a href="index.html">HOME</a>
             <a href="https://www.instagram.com/don_eltac/">INSTAGRAM</a>
-            <a href="https://youtu.be/sXUKSxTP5xY">VIDEOS</a>
+            <a href="https://youtu.be/sXUKSxTP5xY">VIDEO</a>
     </nav>
 </head>
 <body>
