--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <nav>
             <a href="index.html">HOME</a>
             <a href="https://www.instagram.com/don_eltac/">INSTAGRAM</a>
-            <a href="https://youtu.be/Zf5v9afcWso?si=DyY5LWUQfFydSuP0">VIDEO</a>
+            <a href="https://www.youtube.com/embed/Zf5v9afcWso?si=DyY5LWUQfFydSuP0">VIDEO</a>
     </nav>
 </head>
 <body>
@@ -64,7 +64,7 @@
     <center>
     <h1>Watch together</h1>
     <div class="video-container">
-        <iframe width="560" height="315" src="https://youtu.be/Zf5v9afcWso?si=DyY5LWUQfFydSuP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Zf5v9afcWso?si=DyY5LWUQfFydSuP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <br><br>
     <h1>Press the button to hear a message!</h1>
