Update index.html $12

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/jpg" href="favicon.jpg">
     <nav>
             <a href="index.html">HOME</a>
-            <a href="https://www.instagram.com/don_eltac/">INSTAGRAM</a>
+            <a href="https://www.instagram.com/oriannapvt?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">INSTAGRAM</a>
             <a href="https://www.youtube.com/embed/Zf5v9afcWso?si=DyY5LWUQfFydSuP0">VIDEO</a>
     </nav>
 </head>
