Update index.html $$13-14

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </nav>
 </head>
 <body>
+    // This website for funnnnnnnnnnnnnnnn
     <style>
         .video-container {
   position: relative;
@@ -80,23 +81,16 @@
             console.log(`${orianna} Orianna, U are the best!`);
             orianna++;
         }
-            // Function to speak a message
     function speakMessage(message) {
-      // Create a new instance of SpeechSynthesisUtterance
       const speech = new SpeechSynthesisUtterance();
-      // Set the text to be spoken
       speech.text = message;
-      // Speak the message
       window.speechSynthesis.speak(speech);
     }
 
-    // Event listener for the button click
     document.getElementById('speakButton').addEventListener('click', function() {
-      // Call the speakMessage function with the desired message
       speakMessage('Hello! My name is Orianna. Yeah, its not my voice, but i hope u will understand! Lets watch together "Matilda", ok? U and me.');
     });
       </script>
 </center>
-<!-- HTML !-->
 </body>
 </html>
