--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </nav>
 </head>
 <body>
-    // This website for funnnnnnnnnnnnnnnn
+      <!-- This website for funnnnnnnnnnnnnnnn -->
     <style>
         .video-container {
   position: relative;
